# mobaseq_dev

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
examples/: B16keyAdj.csv  CountingTable.xlsx  Moba500Screen_sgID_dict0820.xls
mobaseq/: cli.py  handlers.py
mobaseq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mobaseq/process/: filter_fake_bc.r  legacy.py  rawdata.py  tools.py
mobaseq/qc/: ._plot.py  plot.py  summarize.py
