[metadata]
name = mobaseq
version = 0.1.0
author = Irenaeus Chan
author_email = chani@wustl.edu
description = Python toolkit for running analysis workflow for MOBA-seq assay
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IrenaeusChan/mobaseq_dev
project_urls =
    Bug Tracker = https://github.com/IrenaeusChan/mobaseq_dev/issues
    Source = https://github.com/IrenaeusChan/mobaseq_dev
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
license_files =
    LICENSE

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.7
include_package_data = True
install_requires =
    click>=8.0.3
    clint==0.5.1
    regex==2024.11.6
    pandas==2.0.0
    numpy>=1.24.3
    scipy==1.12.0
    python-dateutil==2.8.2
    numba==0.59.0
    tqdm==4.67.1
    matplotlib>=3.9.0
    scikit-learn>=1.5.0
    adjustText==1.3.0
    seaborn==0.13.2
    openpyxl==3.1.5
    xlrd==2.0.1
dependency_links = git+https://github.com/IrenaeusChan/mobaseq_dev.git@main#egg=mobaseq-0.1.0

#[options.package_data]
#* = src/resources/*

[options.packages.find]
include = mobaseq*

[options.entry_points]
console_scripts =
    mobaseq = mobaseq.cli:cli
